[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dc-cli-jawide"
version = "0.0.1"
authors = [
  { name="Jawide", email="jawide@qq.com" },
]
description = "DC software cli"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jawide/dc-cli"
"Bug Tracker" = "https://github.com/jawide/dc-cli/issues"

[project.scripts]
dc = "dc_cli.dc:main"